fixed invisible slide numbers

--- a/slides/src/styles/bespoke-base-fixed.styl
+++ b/slides/src/styles/bespoke-base-fixed.styl
@@ -78,6 +78,7 @@
   position absolute
   bottom 0
   right 0
+  z-index 1
   font-size 18pt
   color #888
 }
